--- a/assets/css/bs-theme-overrides.css
+++ b/assets/css/bs-theme-overrides.css
@@ -313,14 +313,14 @@
   --bs-info-text-emphasis: #7C828E;
   --bs-info-bg-subtle: #07090D;
   --bs-info-border-subtle: #161C28;
-  --bs-body-color: #ffffff;
-  --bs-body-color-rgb: 255,255,255;
-  --bs-secondary-color: rgba(255,255,255,0.75);
-  --bs-secondary-color-rgb: 255,255,255,0.75;
-  --bs-tertiary-color: rgba(255,255,255,0.5);
-  --bs-tertiary-color-rgb: 255,255,255,0.5;
-  --bs-body-bg: #ffffff;
-  --bs-body-bg-rgb: 255,255,255;
+  --bs-body-color: #293d62;
+  --bs-body-color-rgb: 41,61,98;
+  --bs-secondary-color: rgba(41,61,98,0.75);
+  --bs-secondary-color-rgb: 41,61,98,0.75;
+  --bs-tertiary-color: rgba(41,61,98,0.5);
+  --bs-tertiary-color-rgb: 41,61,98,0.5;
+  --bs-body-bg: #293d62;
+  --bs-body-bg-rgb: 41,61,98;
   --bs-link-color: #293d62;
   --bs-link-color-rgb: 41,61,98;
   --bs-link-hover-color: #293d62;
